--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
+    "@mui/material": "^5.10.4",
     "heroicons": "^2.0.10",
     "next": "12.3.0",
     "react": "18.2.0",
@@ -18,6 +21,7 @@
     "shopify-buy": "^2.16.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
