--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.4",
+    "cookies": "^0.8.0",
+    "cookies-next": "^2.1.1",
     "heroicons": "^2.0.10",
     "next": "12.3.0",
     "react": "18.2.0",
