--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookies-next": "^2.1.1",
     "heroicons": "^2.0.10",
     "next": "12.3.0",
+    "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use-scroll-direction": "^0.1.0",
