--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-use-scroll-direction": "^0.1.0",
     "shopify-buy": "^2.16.1"
   },
