--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-router-dom": "^6.4.1",
     "react-use-scroll-direction": "^0.1.0",
     "shopify-buy": "^2.16.1"
   },
