integrate firebase for review system, minor design changes

--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.4",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "compression-webpack-plugin": "^10.0.0",
     "cookies": "^0.8.0",
     "cookies-next": "^2.1.1",
+    "firebase": "^9.11.0",
     "heroicons": "^2.0.10",
     "next": "12.3.0",
     "nextjs-progressbar": "^0.0.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.4.1",
     "react-use-scroll-direction": "^0.1.0",
-    "shopify-buy": "^2.16.1"
+    "shopify-buy": "^2.16.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
