--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -14,6 +15,7 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "@mui/material": "^5.10.4",
+    "@next/bundle-analyzer": "^12.3.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "compression-webpack-plugin": "^10.0.0",
     "cookies": "^0.8.0",
