--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.4.1",
     "react-use-scroll-direction": "^0.1.0",
     "shopify-buy": "^2.16.1",
+    "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
