changes in profile settings page, minor tweaks in crosssell, design changes for crossell component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "^12.3.1",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "chrome-aws-lambda": "^10.1.0",
     "compression-webpack-plugin": "^10.0.0",
     "cookies": "^0.8.0",
     "cookies-next": "^2.1.1",
@@ -24,6 +25,9 @@
     "heroicons": "^2.0.10",
     "next": "12.3.0",
     "nextjs-progressbar": "^0.0.14",
+    "puppeteer": "^19.0.0",
+    "puppeteer-core": "^19.0.0",
+    "random-useragent": "^0.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.0.3",
