--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.10.4",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
-    "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "^12.3.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "chrome-aws-lambda": "^10.1.0",
@@ -25,16 +24,12 @@
     "heroicons": "^2.0.10",
     "next": "12.3.0",
     "nextjs-progressbar": "^0.0.14",
-    "puppeteer": "^19.0.0",
-    "puppeteer-core": "^19.0.0",
-    "random-useragent": "^0.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.0.3",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.4.1",
     "react-use-scroll-direction": "^0.1.0",
-    "shopify-buy": "^2.16.1",
+    "sitemap": "^7.1.1",
     "swr": "^1.3.0",
     "uuid": "^9.0.0"
   },
